moved editor out of main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories("include")
 set(EXECUTABLE_OUTPUT_PATH "../bin")
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
 
-find_package(Qt6 COMPONENTS Widgets Core REQUIRED)
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Qt6::Widgets Qt6::Core)
+find_package(Qt6 COMPONENTS Gui Widgets Core REQUIRED)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
 #target_link_libraries(MyExecutable my_library)
