--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,5 @@ include_directories("include")
 set(EXECUTABLE_OUTPUT_PATH "../bin")
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
 
-find_package(Qt6 COMPONENTS Gui Widgets Core REQUIRED)
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE fltk)
-
-#target_link_libraries(MyExecutable my_library)
+find_package(wxWidgets REQUIRED COMPONENTS core base richtext)
+target_link_libraries(${CMAKE_PROJECT_NAME} ${wxWidgets_LIBRARIES})
