setup basic wx Window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,7 @@ set(EXECUTABLE_OUTPUT_PATH "../bin")
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
 
 find_package(wxWidgets REQUIRED COMPONENTS core base richtext)
+if(wxWidgets_USE_FILE) # not defined in CONFIG mode
+    include(${wxWidgets_USE_FILE})
+endif()
 target_link_libraries(${CMAKE_PROJECT_NAME} ${wxWidgets_LIBRARIES})
