added stduuid lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 4.0.3)
 project(Grimoire)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("include")
@@ -15,9 +15,17 @@ if(wxWidgets_USE_FILE) # not defined in CONFIG mode
 endif()
 target_link_libraries(${CMAKE_PROJECT_NAME} ${wxWidgets_LIBRARIES})
 
-# lib/
+##########
+#  lib/  #
+##########
+
+#TOML
 include_directories("lib/TOML")
 
+#sqlite
 file(GLOB_RECURSE SQLITE_SOURCES "lib/sqlite/src/*.c")
 list(APPEND SOURCES ${SQLITE_SOURCES})
 include_directories("lib/sqlite/include")
+
+#stduuid
+include_directories("lib/stduuid/include")
