--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,18 @@ set(CMAKE_CXX_STANDARD 20)
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("include")
 
+#lib - sqlite
+file(GLOB_RECURSE SQLITE_SOURCES "lib/sqlite/src/*.c")
+list(APPEND SOURCES ${SQLITE_SOURCES})
+include_directories("lib/sqlite/include")
+
+#lib - TOML
+include_directories("lib/TOML")
+
+#lib - stduuid
+include_directories("lib/stduuid/include")
+
+#exe
 set(EXECUTABLE_OUTPUT_PATH "../bin")
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCES})
 
@@ -15,17 +27,5 @@ if(wxWidgets_USE_FILE) # not defined in CONFIG mode
 endif()
 target_link_libraries(${CMAKE_PROJECT_NAME} ${wxWidgets_LIBRARIES})
 
-##########
-#  lib/  #
-##########
 
-#TOML
-include_directories("lib/TOML")
 
-#sqlite
-file(GLOB_RECURSE SQLITE_SOURCES "lib/sqlite/src/*.c")
-list(APPEND SOURCES ${SQLITE_SOURCES})
-include_directories("lib/sqlite/include")
-
-#stduuid
-include_directories("lib/stduuid/include")
